--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-font-face": "^0.2.1"
 	},
 	"devDependencies": {
+		"autoprefixer": "^9.5.0",
 		"babel-core": "^6.26.3",
 		"babel-loader": "^7.1.4",
 		"babel-preset-es2015": "^6.24.1",
@@ -23,6 +24,7 @@
 		"babel-preset-stage-2": "^6.24.1",
 		"css-loader": "^0.28.11",
 		"file-loader": "^1.1.11",
+		"postcss-loader": "^3.0.0",
 		"style-loader": "^0.21.0",
 		"webpack": "^4.8.3",
 		"webpack-cli": "^3.1.2"
