--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-    "name": "project",
-    "version": "1.0.0",
+    "name": "time-game",
+    "version": "2.0.0",
     "description": "",
+    "repository": "",
     "main": "webpack.config.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,8 +13,7 @@
     "license": "ISC",
     "dependencies": {
         "react": "^15.4.0",
-        "react-dom": "^15.4.0",
-        "react-font-face": "^0.2.1"
+        "react-dom": "^15.4.0"
     },
     "devDependencies": {
         "autoprefixer": "^9.5.0",
